prince/res/css/latex.css
@namespace mml url("http://www.w3.org/1998/Math/MathML");
@namespace sw url("http://www.sciword.com/namespaces/sciword");

texlogo {
  font-family: Times, "Times New Roman", serif;
  font-variant: small-caps;
  letter-spacing: 1px;
}


texlogo sup {
  font-size: 0.85em;
  vertical-align: 0.15em;
  margin-left: -0.36em;
  margin-right: -0.15em;
}


texlogo sub {
  vertical-align: -0.5ex;
  margin-left: -0.1667em;
  margin-right: -0.125em;
  font-size: 1em;
}


caption {
  background-color: rgb(250,240,240);
  margin-top: 3pt;
  margin-bottom: 3pt;
}

table {
  margin: 0px;
}

/*table {
  border-collapse: collapse;
  border-style: dotted;
  border-color: red;
  border-width: 1px;
}
*/

button[class="msi"]::-moz-selection{
  background: blue;
} 

button[class="msi"]{
  position: relative;
  left: 0px;
  bottom: 0.1em;
}


hspace {
/*  -moz-binding: url("chrome://prince/content/bindings/latex.xml#hspace"); */
  display: inline-block;
}

hspace * {
  visibility: hidden;
}

body[showinvis="true"] hspace {
  visibility: visible;
  color: green;
  border-bottom: thin solid;
}

hspace[type="emSpace"] {
  min-width: 1em;
}

hspace[type="twoEmSpace"] {
  min-width: 2em;
}

hspace[type="thinSpace"] {
  min-width: 0.17em;
}

hspace[type="thickSpace"] {
  min-width: 0.5em;
}

hspace[type="italicCorrectionSpace"] {
  min-width: 0.083em;
}

hspace[type="requiredSpace"] {
  min-width: 0.5em;
  /*display: inline;*/
}

hspace[type="nonBreakingSpace"] {
  display: inline;
  white-space: nowrap;
}

/*
hspace[type="negativeThinSpace"] {
  min-width: 0.0em;
}

hspace[type="zeroSpace"] {
  min-width: 0.0em;
}

hspace[type="noIndent"] {
  min-width: 0.0em;
} */

vspace {
/*  -moz-binding: url("chrome://prince/content/bindings/latex.xml#vspace"); */
  display: inline-block;
	max-width: 2px;
/*  overflow: hidden;  */
  max-width: 1px;
  white-space: pre;
/*  position: relative;  */
}

vspace[type="smallSkip"] {
  height: 3pt;
	vertical-align: -3pt;
}

vspace[type="mediumSkip"] {
  height: 6pt;
	vertical-align: -6pt;
}

vspace[type="bigSkip"] {
  height: 12pt;
	vertical-align: -12pt;
}

vpsace[type="strut"] {
  line-height: 100%;
}

vspace[type="mathStrut"] {
  line-height: 100%;
}

vspace[type="customSpace"] {
  vertical-align: -100%;
}


*[showinvis="true"] vspace {
  border-left: thin solid green;
}

msirule {
/*  -moz-binding: url("chrome://prince/content/bindings/latex.xml#msirule"); */
  display: inline-block;
}

msibreak[type="customNewLine"]
{
	display: block;
	width: 2px;
}

msibreak[type="customNewLine"]:after {
  white-space: pre;
  content: "\A";
  -moz-user-select: -moz-none;
}

*[showinvis="true"] msibreak {
	width: 2px;
}

*[showinvis="true"] msibreak[type="customNewLine"] {
	background-color: green;
}

msibreak[type="newPage"]:after {
  white-space: pre;
  content: "\A";
  -moz-user-select: -moz-none;
}

phantom {
  color: transparent;
}

inserted, math inserted {
  color: blue;
  text-decoration: underline;
}

deleted {
  color: red;
  text-decoration: line-through;
}


centeredEnv, centered {
  text-align: center;
  -moz-user-select: text;
}

newPageRule {
	display: inline-block;
	position: absolute;
	left: 0;
	bottom: auto;
	height: 1px;
	width: 100%;
	border-bottom: 2px dashed green;
}

/* invis {
  display: none;
}

*[showinvis="true"] sw|invis {
  display: inline;
}  */

otfont {
  -moz-binding: url("chrome://prince/content/bindings/latex.xml#otfont");
}

fontsize {
  -moz-binding: url("chrome://prince/content/bindings/latex.xml#fontsize");
}

fontcolor {
  -moz-binding: url("chrome://prince/content/bindings/latex.xml#fontcolor");
}


/* paragraph indenting rule -- don't indent the first paragraph in a division */
bodyText {
  margin-bottom: 0 
}

bodyText + bodyText {
  text-indent: 1.5em;
  margin-top: 0 
}

img {
  -moz-force-broken-image-icon: 1;
  min-height: 6px; min-width: 6px;
}


/*graph {
  -moz-binding: url("chrome://prince/content/bindings/latex.xml#graph");
}*/

/*graph {
  display:block;
  cursor: pointer;
}*/

plotwrapper {
  display: block;
	top: 0;
	left: 0;
  -moz-user-select: all;
  -moz-user-focus: normal;
  cursor: pointer;
}

/*plotcaption {
  display: block;
  text-align: center;
  -moz-box-flex: 1;
  min-height: 20px;
}*/

/*object {
}
*/


mml|mi [msimathname="true"] {color: gray; }



mml|mi[tempinput="true"]::before
{
  content: "[";
  color: green;
}


mml|mi[tempinput="true"]::after
{
  content: "]";
  color: green;
}

mml|mi[tempinput="true"]
{
  letter-spacing: 0; /*-0.015em;*/
  -moz-user-select: text;
  color: red;
}

#rotateleft{
  list-style-image: url("chrome://prince/skin/icons/vc-rotateleft.png");
}

mml|mrow[id] {
  position: fixed;
  top: auto;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
  z-index: 0;

}
mml|mrow[id]:after {
  content: "[#" attr(id) "]" ;
  position: fixed;
  top: auto;
  right: 0;
  margin-right: 0;
  z-index: 1;
  left: auto;
  color: black;
  background-color:rgb(180,180,180);
  -moz-user-select: -moz-none;
}


.collapsible {
  -moz-binding: url("chrome://prince/content/bindings/latex.xml#collapsible");
}

/* The following is a generic set of rules to control opening and closing
   sections. They are repeated for each structure that can be closed. Also
   implement the switch between numbered and not numbered*/

chapter>sectiontitle:first-child, chapter>sectiontitle {
  -moz-binding: url("chrome://prince/content/bindings/latex.xml#collapsible");
}

chapter>sectiontitle:before {
  -moz-user-select: none;
}

/* Keep counters from incrementing on unnumbered structures */

chapter[nonum="true"] {
  counter-increment: none;
}

/* Suppress	title for nonnumbered sections */
chapter[nonum="true"]>sectiontitle:first-child {
  content: "";
}

chapter[nonum="true"]>sectiontitle:before {
  content: "";
}

chapter[open="false"]>* {
  display: none;
}

chapter[open="false"]>sectiontitle:first-child {
  display: block;
}

chapter[open="false"]>sectiontitle:first-child {
  display: block;
}
/* ... */

